--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
     --main: #3fb86d;
 }
-body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+#root {
+    font-family: 'Quicksand', sans-serif;
 }
