--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -23,9 +23,14 @@
     margin-right: 160px;
 }
 
+#phone {
+    text-decoration: none;
+}
+
 .links {
     /* display: flex; */
     /* justify-content: space-evenly; */
+    padding: 0;
 }
 
 #num {
@@ -36,7 +41,7 @@
 img {
     display: block;
     height: 50px;
-    width: 360px;
+    width: auto;
 }
 
 .vl {
@@ -51,5 +56,12 @@ img {
     .vl {
         display: none;
     }
+}
 
+@media (max-width: 576px) {
+    img {
+        height: 40px;
+        padding-bottom: 4px;
+
+    }
 }
