--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,40 +1,33 @@
 #footer {
-    /* display: flex; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
     position: absolute;
     bottom: 0;
-    /* justify-content: space-evenly; */
-    /* align-items: center; */
     width: 100%;
     border-top: 3px solid green;
     padding-top: 20px;
     padding-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    flex-wrap: wrap;
-    align-items: center;
 }
 
 #information {
     width: 100%;
     text-align: center;
-    
 }
-
 
 #phone {
     text-decoration: none;
 }
 
 .links {
-    /* display: flex; */
-    /* justify-content: space-evenly; */
     padding: 0;
 }
 
 #col {
-    padding: 0 ;
-    margin: 0 12px
+    padding: 0;
+    margin: 0 12px;
 }
 
 img {
@@ -47,6 +40,5 @@ img {
     img {
         height: 40px;
         padding-bottom: 4px;
-
     }
 }
