--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,37 +1,42 @@
 #footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
     position: absolute;
     bottom: 0;
     width: 100%;
     border-top: 3px solid green;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
 }
 
-#information {
-    width: 100%;
+#footer .row:first-child {
+    display: flex;
+    justify-content: center;
+}
+
+#contact {
     text-align: center;
+    padding: 0;
+}
+
+#contact h3 span {
+    white-space: nowrap;
 }
 
 #phone {
     text-decoration: none;
-}
-
-.contact {
-    padding: 0;
-}
-
-#col {
-    padding: 0;
-    margin: 0 12px;
+    white-space: nowrap;
 }
 
 #certification {
-    display: block;
-    height: 50px;
-    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#certification img {
+    height: 3rem;
+}
+
+@media screen and (max-width: 375px) {
+    #certification img {
+        height: 2rem;
+    }
 }
