--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -19,9 +19,11 @@
     margin: 0;
     padding: 0;
     cursor: pointer;
+    color: white;
 }
 
 #nav-link {
     font-size: 3vw;
     padding: 0;
+    color: white;
 }
