--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -1,5 +1,5 @@
 #form {
-    width: 55%;
+    width: 60%;
     border: 2px solid gray;
     border-radius: 10px;
     margin: 50px 0;
@@ -9,9 +9,18 @@
 }
 
 .form-group {
-    width: 85%;
+    width: 90%;
 }
 
 #submit {
-    width: 15%;
+    border: none;
+    font-size: larger;
+    white-space: nowrap;
+    background-color: var(--main);
+}
+
+@media screen and (max-width: 992px) {
+    #form {
+        width: 90%;
+    }
 }
