Card styling and placement

--- a/src/components/Package/styles.css
+++ b/src/components/Package/styles.css
@@ -1,2 +1,16 @@
 /* rounded corners 10px, subtitle to be between the size of title and descrip, title big and centered everything else justified to the left, width should be 40% */
 
+
+
+.card {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
