--- a/src/components/Package/styles.css
+++ b/src/components/Package/styles.css
@@ -6,9 +6,8 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    width: 25rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-
-
 }
 
 .card:hover {
