--- a/src/components/Package/styles.css
+++ b/src/components/Package/styles.css
@@ -10,6 +10,20 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+.card-title {
+    font-size: 30px;
+    margin-top: 16px;
+}
+
+.card-subtitle {
+    font-size: 20px;
+    /* margin-top: 3px; */
+}
+
+.card-body {
+    padding-top: 10px ;
+}
+
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2);
 }
