contact page formatting, list sizing, breakpoints, BUG- width of row makes page not center items correctly

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 html {
-    position: relative;
     min-height: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
 }
