--- a/src/pages/Contact/style.css
+++ b/src/pages/Contact/style.css
@@ -1,4 +1,89 @@
-main {
+
+
+
+
+/* BUG HERE */
+.row {
+    /* width: 100%; */
+    /* display: flex; */
+}
+/* BUG HERE */
+
+
+
+
+.column {
     display: flex;
     justify-content: center;
+    padding: 0;
+}
+
+#examples {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 50px 0;
+}
+
+
+#list-heading {
+    font-size: xx-large;
+}
+
+.list-item {
+    font-size: large;
+}
+
+#contact-form {
+    margin: 50px 0px;
+}
+
+#issa-logo {
+    height: 200px;
+}
+
+@media screen and (max-width: 991px) {
+    html {
+        overflow-y: scroll;
+    }
+
+    html::-webkit-scrollbar {
+        display: none;
+    }
+
+    #examples {
+        margin: 20px 0;
+    }
+
+    #contact-form {
+        margin-top: 0;
+        margin-bottom: 20px;
+    }
+
+    #examples-list {
+        order: 2;
+    }
+
+    #issa-logo {
+        height: 125px;
+    }
+
+    #examples {
+        flex-direction: row;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    #list-heading {
+        font-size: 16pt;
+    }
+
+    .list-item {
+        font-size: smaller;
+    }
+
+    #issa-logo {
+        display: none;
+    }
 }
