fixed styling issues and bug with width of row

--- a/src/pages/Contact/style.css
+++ b/src/pages/Contact/style.css
@@ -1,3 +1,7 @@
+.row {
+    width: 100%;
+}
+
 .column {
     display: flex;
     justify-content: center;
@@ -11,7 +15,6 @@
     align-items: center;
     margin: 50px 0;
 }
-
 
 #list-heading {
     font-size: xx-large;
