--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -1,8 +1,11 @@
-.row {
+#hero-container {
     margin: 0;
-    
+    margin-top: 30px;
+
 }
 
-#hero-container {
-    margin-top: 30px;
+#avatar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
