--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,11 +5,6 @@
     border-radius: 0 0 10px 10px;
 }
 
-.col {
-    display: flex;
-    justify-content: center;
-}
-
 #logo {
     height: 6vw;
 }
@@ -23,7 +18,20 @@
 }
 
 #nav-link {
+    text-align: right;
     font-size: 1.5vw;
     padding: 0;
     color: white;
+}
+
+@media screen and (max-width: 992px) {
+    .burger {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    #nav-link {
+       padding-top: 15px;
+       padding-bottom: 15px;
+    }
 }
