--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,13 +6,14 @@
 }
 
 #logo {
-    height: 6vw;
+    height: 8vw;
 }
 
 #brand-name {
-    font-size: 3vw;
+    font-size: 5vw;
     margin: 0;
     padding: 0;
+    padding-left: 30px;
     cursor: pointer;
     color: white;
 }
@@ -35,3 +36,11 @@
        padding-bottom: 15px;
     }
 }
+@media screen and (max-width: 991px) {
+    #brand-name {
+    padding: 0;
+    }
+
+
+}
+
