--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 :root {
     --main: #4c4d53;
+    --accent: #f4511e;
 }
 
 #root {
     font-family: 'Coda', cursive;
 }
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
    ========================================================================== */
