--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -32,10 +32,28 @@
 }
 
 #certification img {
-    height: 3rem;
+    height: 4rem;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1199px) {
+    #certification img {
+        height: 3.5rem;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    #certification img {
+        height: 3rem;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    #certification img {
+        height: 2.5rem;
+    }
+}
+
+@media screen and (max-width: 575px) {
     #certification img {
         height: 2rem;
     }
