hero styles update

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ html {
     min-height: 100%;
     display: flex;
     justify-content: center;
-    position: relative;
+    /* position: relative; */
 }
 
 body {
