--- a/src/components/Avatar/style.css
+++ b/src/components/Avatar/style.css
@@ -2,5 +2,23 @@
     border-radius: 50%;
 }
 
+#something {
+    width: 750px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+/* @media screen and (max-width: 1300 ) {
+    #avatar {
+        max-width: 80%;
+        max-height: 100%;
+    }
+} */
 
+@media screen and (max-width: 1250px) {
+    #avatar {
+        max-width: 75%;
+        max-height: 100%;
+    }
+}
