added set state for text when email is sending, sent, or if there is an error

--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -11,6 +11,13 @@
     width: 90%;
 }
 
+.actionContainer {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 #submit {
     border: none;
     font-size: larger;
